fixing bug for double digit notice counts not centered

--- a/src/assets/scss/customizer/controls/_notifications.scss
+++ b/src/assets/scss/customizer/controls/_notifications.scss
@@ -35,6 +35,7 @@
 			width: 20px;
 			height: 20px;
 			background-color: #ca4a1f;
+			padding: 0;
 			position: absolute;
 			top: 9px;
 			right: 9px;
